refactor: 플레이어 식별자를 닉네임에서 memberId 로 바꾼다 (#27)
* refactor: 방·게임의 플레이어 식별자를 닉네임에서 memberId 로 바꾼다

닉네임은 표시용 이름이지 식별자가 아니다. 지금은 전역 유니크라
우연히 동작할 뿐이고, 액션 요청은 본문의 playerName 을 그대로 믿어
남의 이름으로 차례를 쓰거나 점수를 올릴 수 있었다.

- GamePlayer 가 (memberId, nickname, ready) 를 들고, 방·랭킹·행맨
  턴 순서의 키를 전부 memberId 로 바꾼다
- GameAction 의 주체는 요청 본문이 아니라 인증 주체에서 가져온다
- game_room.host_member_id, game_room_member.member_id 로 스키마를
  바꾸고 닉네임은 member 테이블에서만 읽는다
- 사람을 가리키는 브로드캐스트 페이로드는 memberId 와 nickname 을
  함께 싣는다. GAME_RESULT 는 문자열 조립 대신 배열로 내려준다

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>

* refactor: 프론트엔드의 나·방장·차례 판정을 memberId 로 바꾼다

닉네임 문자열 비교로 "나"를 찾던 자리를 전부 회원 번호 비교로 바꾼다.
닉네임은 화면에 그리는 용도로만 남는다.

- Player.id(닉네임) 를 memberId 로 바꾸고, 방·설정·행맨 상태에도
  회원 번호를 함께 싣는다
- 로그인 시 회원 번호를 보관해 방장·내 차례 판정에 쓴다
- GAME_RESULT 는 "이름:점수" 문자열 파싱 대신 배열을 그대로 읽는다
- 행맨 액션 요청에서 playerName 을 빼 서버가 인증 주체로 정하게 한다

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>

* test: 회원 번호 식별과 사칭 차단을 검증하는 테스트를 더한다

- 남의 회원 번호를 본문에 실어도 인증 주체의 액션으로 처리된다
- 닉네임이 같아도 회원이 다르면 다른 플레이어로 취급한다
- 방을 저장했다 복원하면 회원 번호와 현재 닉네임이 살아난다

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>

---------

Co-authored-by: Claude Opus 5 <noreply@anthropic.com>